# app_business_status

./: .coveragerc  .gitignore  Dockerfile  README.md  app.py  docker-compose.yaml  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.sh
.streamlit/: config.toml
config/: config.yaml  taxes.yaml
doc/: project_structure.md
modules/: calcul_IR.py  calcul_dividendes.py  calcul_resultat.py  calculs.py  config.py  dividendes.py  impot_societes.py  optimization.py  salaires.py  societe.py  utils.py
modules/GUI/: about.py  home.py  home_asuppr.py  ui_components.py
src/: config.py  impot_revenu.py  impot_societes.py  societe.py
src/GUI/: about.py  home.py
tests/: test_societe.py
tests/unit/: test_impot_revenu.py  test_impot_societes.py  test_societe.py
